--- a/css/apis.css
+++ b/css/apis.css
@@ -1,4 +1,8 @@
 #dataContainer{
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+
+#dataContainer > :only-child {
+    justify-self: center;
 }
