--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,15 @@
 .grid {
       display: grid;
       gap: 20px;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      grid-template-columns: 1fr 1fr 1fr 1fr;
       justify-items: center;
       align-items: start;
     }
 
-@media (min-width: 768px) and (max-width: 1024px) {  
+@media (min-width: 768px) and (max-width: 1024px) {
   .grid {
     background-color: lightblue;
-    /* aquí se respeta auto-fit, ya no fuerzas columnas fijas */
+    grid-template-columns: 1fr 1fr;
   }
 }
 
@@ -17,6 +17,6 @@
   .grid {
     font-size: 14px;
     background-color: pink;
-    /* lo mismo: auto-fit se encarga */
+    grid-template-columns: 1fr ;
   }
 }
